# prax-mobile

./: README.md
.github/workflows/: ci.yml
react-native-expo/: .eslintrc.js  .gitignore  README.md  app.json  babel.config.cjs  lingui.config.js  metro.config.cjs  metro.config.js  package-lock.json  package.json  tsconfig.json  typings.d.ts
react-native-expo/.github/workflows/: ci.yml
react-native-expo/.storybook/: fonts.css  main.ts  preview.tsx
react-native-expo/app/: _layout.tsx  index.tsx  profile.tsx  transactions.tsx
react-native-expo/app/(tabs)/: _layout.tsx  index.tsx  portfolio.tsx  trade.tsx
react-native-expo/app/profile/: defaultPaymentToken.tsx  grpc.tsx
react-native-expo/assets/: README.md
react-native-expo/components/: Text.stories.tsx
react-native-expo/components/ActionSheet/: index.tsx
react-native-expo/components/AssetIcon/: index.stories.ts  index.tsx
react-native-expo/components/Avatar/: index.stories.ts  index.tsx
react-native-expo/components/BackButtonHeader/: index.tsx
react-native-expo/components/BalanceAndActions/: index.tsx
react-native-expo/components/Box/: index.stories.tsx  index.tsx
react-native-expo/components/Button/: index.stories.ts  index.tsx
react-native-expo/contexts/: AppInitializationContext.ts
react-native-expo/factories/: address.ts  amount.ts  balance.ts  balancesResponse.ts  helpers.ts  penumbraAddress.ts  transaction.ts
react-native-expo/storage/: provingKeys.ts  sqlite.ts
react-native-expo/store/: actionSheet.ts  balances.ts  defaultPaymentTokenScreen.ts  depositFlow.ts  grpcScreen.ts  hooks.ts  index.ts  portfolioScreen.ts  rootReducer.ts  secureStore.ts  transactions.ts
react-native-expo/types/: ActionType.ts  Asset.ts  Balance.ts  Transaction.ts
react-native-expo/utils/: constants.ts  dripsyTheme.ts  theme.ts
swift/swift/: ContentView.swift  swiftApp.swift
swift/swift.xcodeproj/: project.pbxproj
swift/swiftTests/: swiftTests.swift
swift/swiftUITests/: swiftUITests.swift  swiftUITestsLaunchTests.swift
uniffi/: .gitignore  Cargo.toml  build-ios.sh  execute.sh  makefile
uniffi/ios/Mobile.xcframework/ios-arm64-simulator/Headers/: mobile.swift
uniffi/ios/Mobile.xcframework/ios-arm64/Headers/: mobileFFI.h
uniffi/src/: custody.rs  keys.rs  lib.rs  structs.rs  sync.rs  view.rs  view_server.rs
(+76 files in other folders)
